@@ -1,5 +1,5 @@
 %global VERSION  6.6.6
-%global Patchlevel  1
+%global Patchlevel  0
 
 Name:           ImageMagick
 Version:        %{VERSION}
