@@ -12,7 +12,7 @@ PACKAGE_NAME='ImageMagick'
 # PACKAGE_NAME (e.g. "1.0.0").
 PACKAGE_VERSION='6.6.6'
 PACKAGE_LIB_VERSION="0x666"
-PACKAGE_RELEASE="1"
+PACKAGE_RELEASE="0"
 PACKAGE_LIB_VERSION_NUMBER="6,6,6,${PACKAGE_RELEASE}"
 PACKAGE_RELEASE_DATE=`date +%F`
 PACKAGE_STRING="$PACKAGE_NAME $PACKAGE_VERSION"
